--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.1",
     "core-js": "^3.6.5",
+    "snoowrap": "^1.23.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
