--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.1",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "snoowrap": "^1.23.0",
-    "vue": "^2.6.11",
+    "vue": "^2.6.14",
     "vue-router": "^3.5.2"
   },
   "devDependencies": {
